# field_api

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  abor1.F90  abor1.intfb.h  array_field_wrapper_mod.fypp  array_field_wrapper_module.fypp  c_malloc.c  cuda.F90  dev_alloc.c  dev_alloc_mod.fypp  dev_alloc_module.fypp  fieldType.py  field_RANKSUFF_access_module.fypp  field_RANKSUFF_array_module.fypp  field_RANKSUFF_array_util_module.fypp  field_RANKSUFF_buffer_module.fypp  field_RANKSUFF_data_module.fypp  field_RANKSUFF_factory_module.fypp  field_RANKSUFF_gang_module.fypp  field_RANKSUFF_gather_module.fypp  field_RANKSUFF_gathscat_module.fypp  field_RANKSUFF_get_devptr_from_parent.fypp  field_RANKSUFF_list_module.fypp  field_RANKSUFF_module.fypp  field_RANKSUFF_set_devptr_from_parent.fypp  field_RANKSUFF_shuffle_module.fypp  field_RANKSUFF_util_module.fypp  field_abort_module.F90  field_access_module.fypp  field_array_module.fypp  field_array_util_module.fypp  field_array_wrapper_module.fypp  field_async_module.F90  field_backtrace.c  field_basic_module.F90  field_bt.c  field_buffer_module.fypp  field_constants_module.F90  (+31 more)
.github/tools/: install-hdf5.sh
.github/workflows/: build-hpc.yml  build.yml  cmake.yml  fieldapi_gnu.yml  fieldapi_intel.yml  fieldapi_intel_classic.yml  fieldapi_intel_modern.yml  fieldapi_tests.yml  label-pr.yml
arch/AMDmuncl01/rocm-afar/22/: env.sh
arch/aac7/rocm-afar/22.2/: env.sh  toolchain.cmake
arch/ecmwf/hpc2020-ag/nvhpc/25.9/: env.sh  toolchain.cmake
arch/ecmwf/hpc2020/gnu/14.2.0/: env.sh
arch/ecmwf/hpc2020/intel/2021.4.0/: env.sh
arch/ecmwf/hpc2020/nvhpc/22.11/: env.sh  toolchain.cmake
arch/ecmwf/hpc2020/nvhpc/24.5/: env.sh  toolchain.cmake
arch/eurohpc/lumi/cray-cpu/20.0.0/: env.sh  toolchain.cmake
arch/eurohpc/lumi/cray-gpu/15.0.1/: env.sh  toolchain.cmake
arch/eurohpc/lumi/cray-gpu/17.0.1/: env.sh  toolchain.cmake
arch/eurohpc/lumi/rocm-afar/22.2/: env.sh  toolchain.cmake
arch/mf/belenos_taranis/nvhpc/23.9/: env.sh  toolchain.cmake
arch/mf/belenos_taranis/nvhpc/24.7/: env.sh  toolchain.cmake
cmake/: field_api-import.cmake.in  field_api_add_object_library.cmake  field_api_compile_options.cmake  field_api_expand_fypp.cmake  field_api_expand_fypp_ranksuff.cmake  field_api_fetchcontent_ecbuild.cmake  field_api_fetchcontent_fypp.cmake  field_api_find_fiat_modules.cmake  field_api_find_fypp.cmake  field_api_get_lib_type.cmake  field_api_get_offload_model.cmake  field_api_macros.cmake  field_api_target_add_module_dirs.cmake
cmake/features/: OMP.cmake
cmake/features/OMP/: test_openmp_target.F90
python_utils/: fieldType.py  offload_macros.py
python_utils/offload_backends/: __init__.py  host_only.py
python_utils/offload_backends/nvhpc/: __init__.py  openacc.py  openacc_cuda.py  openmp.py  openmp_cuda.py
python_utils/offload_backends/rocm_afar/: __init__.py  openmp.py  openmp_hip.py
src/: CMakeLists.txt
src/buffer/: CMakeLists.txt  field_RANKSUFF_factory_gang_module.fypp  field_RANKSUFF_factory_stack_module.fypp  field_RANKSUFF_gang_module.fypp  field_RANKSUFF_stack_member_module.fypp  field_RANKSUFF_stack_module.fypp
src/core/: CMakeLists.txt  abor1.intfb.h  dev_alloc.c  dev_alloc_module.fypp  field_RANKSUFF_data_module.fypp  field_RANKSUFF_module.fypp  field_async_module.fypp  field_basic_module.F90  field_constants_module.F90  field_defaults_module.F90  field_gang_module.fypp  field_module.fypp  host_alloc_module.fypp  mem_pool_module.F90
src/debug/: CMakeLists.txt  field_backtrace.c  field_statistics_module.F90
src/factory/: CMakeLists.txt  field_RANKSUFF_factory_module.fypp  field_factory_module.fypp
src/hdf5io/: CMakeLists.txt  field_RANKSUFF_hdf5_module.fypp  field_RANKSUFF_module.fypp  field_basic_hdf5_module.F90  field_hdf5_module.fypp
src/io/: CMakeLists.txt  field_RANKSUFF_hdf5_module.fypp  hdf5_common_module.F90
src/shuffle/: CMakeLists.txt  field_RANKSUFF_gather_collapse2_module.fypp  field_RANKSUFF_gather_collapseCOLLAPSE_module.fypp  field_RANKSUFF_gather_module.fypp  field_RANKSUFF_shuffle_collapse2_module.fypp  field_RANKSUFF_shuffle_collapseCOLLAPSE_module.fypp  field_RANKSUFF_shuffle_module.fypp  field_gathscat_collapse2_module.fypp  field_gathscat_collapse2_type_module.fypp  field_gathscat_collapseCOLLAPSE_module.fypp  field_gathscat_collapseCOLLAPSE_type_module.fypp  field_gathscat_module.fypp  field_shuffle_module.fypp  field_shuffle_type_module.fypp
src/util/: CMakeLists.txt  field_RANKSUFF_access_module.fypp  field_RANKSUFF_array_module.fypp  field_RANKSUFF_array_util_module.fypp  field_RANKSUFF_clone_module.fypp  field_RANKSUFF_util_module.fypp  field_array_module.fypp  field_array_util_module.fypp  field_clone_module.fypp  field_util_module.fypp
tests/: CMakeLists.txt  abor1catcher.sh  async_host.F90  check_gpu_num.F90  copy_struct.F90  cpu_to_gpu.F90  cpu_to_gpu_delayed_init_value.F90  cpu_to_gpu_init_value.F90  delayed_by_default.F90  delete_device_wrapper.F90  field_0_size_wrapper_get_view.F90  field_openmp_firstprivate.F90  final_owner.F90  final_wrapper.F90  final_wrapper_gpu.F90  gather_scatter.F90  gather_scatter_collapse1.F90  gather_scatter_collapse1_lastdim.F90  gather_scatter_collapse2.F90  gather_scatter_collapse2_lastdim.F90  gather_scatter_lastdim.F90  get_device_data_get_view.F90  get_device_data_multi_blk_async.F90  get_dims.F90  get_stats.F90  get_stats_no_openacc.F90  get_view.F90  get_view_after_transfer.F90  get_view_bugfix1.F90  get_view_field_buffer.F90  get_view_get_device_data.F90  get_view_when_ndevfresh.F90  get_view_when_ndevfresh2.F90  get_view_when_nhstfresh.F90  get_view_when_unallocated.F90  get_view_when_uninitialized.F90  gpu_to_cpu.F90  gpu_to_cpu_delayed_init_value.F90  gpu_to_cpu_init_value.F90  init_delayed_owner.F90  (+90 more)
